--- a/Web/templates/item_page.html
+++ b/Web/templates/item_page.html
@@ -11,7 +11,7 @@
     </main>
     <aside class="sidemain">
         <div class="price-box"> <span class="price-label">Precio</span>
-            <span class="price-value">{{ stock.Precio }} €</span>
+            <span class="price-value">{{ stock.precio_formateado }} €</span>
         </div>
         <div class="side-box">
             <table>
